# hermes-five

./: .gitignore  Cargo.toml  LICENSE  README.md  roadmap.md
.github/workflows/: build.yml  coverage.yml  deploy_docs.yml  github.yml  test.yml
docs/: concepts.md  getting-started.md  index.md  package.json  pnpm-lock.yaml  troubleshooting.md  what-is-Hermes-Five.md  what-is-HermesFive.md
docs/.vitepress/: config.mts
docs/.vitepress/sidebars/versioned/: 0.1.0.json  0.2.0.json
docs/.vitepress/theme/: custom.css  index.ts
docs/api/: index.md
docs/guide/introduction/: concepts.md  getting-started.md  troubleshooting.md
docs/guide/showcases/: board.md  index.md  protocols.md
docs/versions/0.2.0/: index.md
hermes-five/: Cargo.toml
hermes-five-macros/: Cargo.toml
hermes-five-macros-internals/: Cargo.toml  build.rs  lib.rs  src
hermes-five-macros/src/: lib.rs
hermes-five-macros/src/internals/: mod.rs
hermes-five/examples/: readme.md
hermes-five/examples/animation/: animation.rs  multiple_animation.rs  multiple_animations.rs
hermes-five/examples/board/: blink.rs  close_event.rs  creation.rs  custom_port.rs  events.rs  hardware.rs  multiple_events.rs  ready_event.rs
hermes-five/examples/button/: inverted.rs  pullup.rs  simple.rs
hermes-five/examples/led/: animate.rs  blink.rs  brightness.rs  default.rs  intensity.rs  pulse.rs  simple.rs
hermes-five/examples/output/: digital.rs  pwm.rs
hermes-five/examples/sensor/: potentiometer.rs
hermes-five/examples/sensors/: microwave.rs  potentiometer.rs
hermes-five/examples/servo/: animate.rs  pca9685.rs  servo.rs  sweep.rs
hermes-five/examples/sync/: blink.rs
hermes-five/src/: board.rs  errors.rs  lib.rs
hermes-five/src/animation/: animation.rs  keyframe.rs  mod.rs  segment.rs  track.rs
hermes-five/src/animations/: animation.rs  easing.rs  keyframe.rs  mod.rs  segment.rs  track.rs
hermes-five/src/devices/: button.rs  led.rs  mod.rs  sensor.rs  servo.rs
hermes-five/src/devices/input/: analog.rs  button.rs  digital.rs  mod.rs
hermes-five/src/devices/output/: digital.rs  led.rs  mod.rs  pwm.rs  servo.rs
hermes-five/src/entities/: board.rs  mod.rs
hermes-five/src/hardware/: board.rs  mod.rs  pca9685.rs
hermes-five/src/io/: constants.rs  data.rs  mod.rs  plugin.rs  protocol.rs
hermes-five/src/io/firmata/: constants.rs  mod.rs
hermes-five/src/io/protocols/: mod.rs  remote.rs
hermes-five/src/io/transports/: mod.rs  serial.rs
hermes-five/src/misc/: easing.rs  mod.rs  range.rs  state.rs
hermes-five/src/mocks/: actuator.rs  hardware.rs  input.rs  input_device.rs  mod.rs  output.rs  output_device.rs  plugin_io.rs  protocol.rs  serial_port.rs  transport_layer.rs
hermes-five/src/protocols/: constants.rs  errors.rs  firmata.rs  hardware.rs  i2c_reply.rs  mod.rs  pins.rs  protocol.rs  serial.rs
hermes-five/src/protocols/flavor/: mock.rs  mod.rs  serial.rs
hermes-five/src/storage/: entity.rs  mod.rs  storage.rs
hermes-five/src/tests/mocks/: actuator.rs  hardware.rs  mod.rs  protocol.rs
hermes-five/src/utils/: easing.rs  events.rs  file.rs  helpers.rs  mod.rs  range.rs  scale.rs  state.rs  task.rs
hermes-five/tests/: version-numbers.rs
hermes-macros/: Cargo.toml
hermes-macros-inner/: Cargo.toml
hermes-macros-inner/src/: lib.rs
hermes-macros-internals/: Cargo.toml  build.rs  lib.rs  src
hermes-macros/src/: entity_macro.rs  helpers.rs  lib.rs  runtime_macro.rs
hermes-macros/src/internals/: helpers.rs  mod.rs
hermes-macros/tests/: entity_macro.rs  runtime_macro.rs
hermes-macros/tests/compile-fail/: incorrect_entity.rs  incorrect_entity.stderr  incorrect_runtime.rs  incorrect_runtime.stderr
hermes-macros/tests/compile_fail/: incorrect_entity.rs  incorrect_entity.stderr  incorrect_runtime.stderr  incorrect_usage.stderr
