[workspace]
members = [
    "hermes-five",
    "hermes-macros",
    "hermes-macros-internals",
]
resolver = "2"

[workspace.package]
version = "0.1.0-beta"
edition = "2021"
description = "The Rust Robotics & IoT Platform"
authors = ["Dominique CLAUSE <dom.clause@gmail.com>"]
repository = "https://github.com/dclause/hermes-five"
readme = "README.md"
license = "MIT"