[package]
name = "hermes-five"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]

[features]
default = ["libudev"]
libudev = ["serialport/libudev"]
serde = ["dep:serde", "dep:serde_json", "dep:typetag"]
mocks = []

[dependencies]
hermes-macros = { path = "../hermes-macros" }
dyn-clone = "1.0.17"
futures = "0.3.30"
log = "0.4.22"
parking_lot = "0.12.3"
simple-easing = "1.0.1"
snafu = "0.8.4"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
# Protocol(s)
serialport = { version = "4.4.0", default-features = false }
# Feature dependent
serde = { version = "1.0.203", optional = true }
serde_json = { version = "1.0.120", optional = true }
typetag = { version = "0.2.17", optional = true }

[dev-dependencies]
serial_test = "3.1.1"

# ########################################
# ANIMATION examples

[[example]]
name = "animation_animation"
path = "examples/animation/animation.rs"

[[example]]
name = "animation_multiple_animation"
path = "examples/animation/multiple_animation.rs"

# ########################################
# BOARD examples

[[example]]
name = "board_close_event"
path = "examples/board/close_event.rs"

[[example]]
name = "board_custom_port"
path = "examples/board/custom_port.rs"

[[example]]
name = "board_hardware"
path = "examples/board/hardware.rs"

[[example]]
name = "board_multiple_events"
path = "examples/board/multiple_events.rs"

[[example]]
name = "board_ready_event"
path = "examples/board/ready_event.rs"

# ########################################
# LED examples

[[example]]
name = "led_blink"
path = "examples/led/blink.rs"

[[example]]
name = "led_pulse"
path = "examples/led/pulse.rs"

[[example]]
name = "led_intensity"
path = "examples/led/intensity.rs"

# ########################################
# SERVO examples

[[example]]
name = "servo_servo"
path = "examples/servo/servo.rs"

# @todo restore this example with animate helper.
#[[example]]
#name = "servo_animate"
#path = "examples/servo/animate.rs"

# ########################################
# SYNC examples

[[example]]
name = "sync_blink"
path = "examples/sync/blink.rs"