[package]
name = "hermes-five"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]

[features]
default = ["libudev"]
libudev = ["serialport/libudev"]
serde = ["dep:serde", "dep:serde_json", "dep:typetag"]
mocks = []

[dependencies]
hermes-macros = { path = "../hermes-macros" }
dyn-clone = "1.0.17"
futures = "0.3.31"
log = "0.4.22"
parking_lot = "0.12.3"
simple-easing = "1.0.1"
snafu = "0.8.5"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
# Protocol(s)
serialport = { version = "4.6.0", default-features = false }
# Feature dependent
serde = { version = "1.0.214", optional = true }
serde_json = { version = "1.0.132", optional = true }
typetag = { version = "0.2.18", optional = true }

[dev-dependencies]
serial_test = "3.1.1"
version-sync = "0.9.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

# ########################################
# ANIMATION examples

[[example]]
name = "animation_animation"
path = "examples/animation/animation.rs"

[[example]]
name = "animation_multiple_animation"
path = "examples/animation/multiple_animation.rs"

# ########################################
# BOARD examples

[[example]]
name = "board_creation"
path = "examples/board/creation.rs"

[[example]]
name = "board_events"
path = "examples/board/events.rs"

[[example]]
name = "board_hardware"
path = "examples/board/hardware.rs"

# ########################################
# Button examples

[[example]]
name = "button_simple"
path = "examples/button/simple.rs"

[[example]]
name = "button_pullup"
path = "examples/button/pullup.rs"

[[example]]
name = "button_inverted"
path = "examples/button/inverted.rs"

# ########################################
# LED examples

[[example]]
name = "led_simple"
path = "examples/led/simple.rs"

[[example]]
name = "led_blink"
path = "examples/led/blink.rs"

[[example]]
name = "led_pulse"
path = "examples/led/pulse.rs"

[[example]]
name = "led_brightness"
path = "examples/led/brightness.rs"

[[example]]
name = "led_animate"
path = "examples/led/animate.rs"

# ########################################
# OUTPUTS examples

[[example]]
name = "output_digital"
path = "examples/output/digital.rs"

[[example]]
name = "output_pwm"
path = "examples/output/pwm.rs"

# ########################################
# SENSORS examples

[[example]]
name = "sensors_potentiometer"
path = "examples/sensors/potentiometer.rs"

[[example]]
name = "sensors_microwave"
path = "examples/sensors/microwave.rs"

# ########################################
# SERVO examples

[[example]]
name = "servo_servo"
path = "examples/servo/servo.rs"

[[example]]
name = "servo_sweep"
path = "examples/servo/sweep.rs"

[[example]]
name = "servo_animate"
path = "examples/servo/animate.rs"