[package]
name = "hermes-macros-internals"
description = "Inner (private) - this crate is used for test coverage purposes only."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false
build = "build.rs"
exclude = ["build.rs"]

[lib]
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }