[package]
name = "hermes-macros"
description = "Macros definitions for hermes-five."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.68", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.96"
hermes-five = { path = "../hermes-five" }

runtime-macros = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"