[package]
name = "hermes-macros"
description = "Macros definitions for hermes-five."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
hermes-macros-inner = { path = "../hermes-macros-inner" }

[dev-dependencies]
tokio = "1.38.0"